test/arrays/bradc/noelemtype.good
noelemtype.chpl:5: error: array declaration has no element type
